force-app/main/default/objects/Purchase_Order_Decon__c/Purchase_Order_Decon__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Decon</label>
    <nameField>
        <label>Purchase Order Decon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders Decon</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>