force-app/main/default/objects/Purchase_Order_Decon__c/fields/Aug_ID__c.field-meta.xml
<CustomField>
    <fullName>Aug_ID__c</fullName>
    <formula>Site_Deconstruction_Record__r.AUG_ID__c</formula>
    <label>Aug ID</label>
    <type>Text</type>
</CustomField>