force-app/main/default/objects/Purchase_Order_Decon__c/fields/Autonumbering_field__c.field-meta.xml
<CustomField>
    <fullName>Autonumbering_field__c</fullName>
    <description>hidden field to track number of pos created and assist in numbering system.</description>
    <displayFormat>{0}</displayFormat>
    <label>Autonumbering field</label>
    <type>AutoNumber</type>
</CustomField>