force-app/main/default/objects/Purchase_Order_Decon__c/fields/Cascade_ID__c.field-meta.xml
<CustomField>
    <fullName>Cascade_ID__c</fullName>
    <inlineHelpText>Populated manually</inlineHelpText>
    <label>Cascade ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>