force-app/main/default/objects/Purchase_Order_Decon__c/fields/Deconstruction_Phase__c.field-meta.xml
<CustomField>
    <fullName>Deconstruction_Phase__c</fullName>
    <formula>Site_Deconstruction_Record__r.Deconstruction_Phases__c</formula>
    <inlineHelpText>Deconstruction Phase of Site Deconstruction</inlineHelpText>
    <label>Deconstruction Phase</label>
    <type>Text</type>
</CustomField>