force-app/main/default/objects/Purchase_Order_Decon__c/fields/Deconstruction_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deconstruction_Stage__c</fullName>
    <formula>TEXT(Site_Deconstruction_Record__r.Decommission_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deconstruction Stage</label>
    <type>Text</type>
</CustomField>