force-app/main/default/objects/Purchase_Order_Decon__c/fields/Dish_Option_Status__c.field-meta.xml
<CustomField>
    <fullName>Dish_Option_Status__c</fullName>
    <formula>Site_Deconstruction_Record__r.Dish_Option_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dish Option Status</label>
    <type>Text</type>
</CustomField>