force-app/main/default/objects/Purchase_Order_Decon__c/fields/DX_Complete_Actual__c.field-meta.xml
<CustomField>
    <fullName>DX_Complete_Actual__c</fullName>
    <formula>Site_Deconstruction_Record__r.DX_Complete_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DX Complete Actual</label>
    <type>Date</type>
</CustomField>