force-app/main/default/objects/Purchase_Order_Decon__c/fields/DX_Status__c.field-meta.xml
<CustomField>
    <fullName>DX_Status__c</fullName>
    <formula>TEXT( Site_Deconstruction_Record__r.DX_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DX Status</label>
    <type>Text</type>
</CustomField>