force-app/main/default/objects/Purchase_Order_Decon__c/fields/Dx_type__c.field-meta.xml
<CustomField>
    <fullName>Dx_type__c</fullName>
    <formula>TEXT(Site_Deconstruction_Record__r.DX_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dx type</label>
    <type>Text</type>
</CustomField>