force-app/main/default/objects/Purchase_Order_Decon__c/fields/Landlord_Preferred_GC__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Preferred_GC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord Preferred GC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders Decon</relationshipLabel>
    <relationshipName>Purchase_Orders_Decon</relationshipName>
    <type>Lookup</type>
</CustomField>