force-app/main/default/objects/Purchase_Order_Decon__c/fields/New_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Requested_Amount__c</fullName>
    <label>New Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>