force-app/main/default/objects/Purchase_Order_Decon__c/fields/Open_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Amount__c</fullName>
    <label>Open Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>