force-app/main/default/objects/Purchase_Order_Decon__c/fields/PO_Closed_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Closed_Out_Date__c</fullName>
    <label>PO Closed Out Date</label>
    <type>Date</type>
</CustomField>