force-app/main/default/objects/Purchase_Order_Decon__c/fields/PO_Comments__c.field-meta.xml
<CustomField>
    <fullName>PO_Comments__c</fullName>
    <label>PO Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>