force-app/main/default/objects/Purchase_Order_Decon__c/fields/PO_Main_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Main_Type__c</fullName>
    <label>PO Main Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Exceptions</fullName>
            </value>
            <value>
                <fullName>Pay &amp; Walk</fullName>
            </value>
            <value>
                <fullName>OOS Pricing</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>