force-app/main/default/objects/Purchase_Order_Decon__c/fields/PO_requested_by_Decon_Team__c.field-meta.xml
<CustomField>
    <fullName>PO_requested_by_Decon_Team__c</fullName>
    <label>PO requested by Decon Team</label>
    <type>Date</type>
</CustomField>