force-app/main/default/objects/Purchase_Order_Decon__c/fields/PO_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Status__c</fullName>
    <label>PO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Buy Down</fullName>
            </value>
            <value>
                <fullName>Buy Up</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Check with PM</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>LL Preferred GC PO Approved</fullName>
            </value>
            <value>
                <fullName>LL Preferred GC PO Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Pending Buy down</fullName>
            </value>
            <value>
                <fullName>Pending Buy Up</fullName>
            </value>
            <value>
                <fullName>Pending Cancel Line item</fullName>
            </value>
            <value>
                <fullName>Pending Cancel PO</fullName>
            </value>
            <value>
                <fullName>Pending Scope change</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Scope Change</fullName>
                <label>Scope change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>