force-app/main/default/objects/Purchase_Order_Decon__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <description>Was previously PO Type</description>
    <inlineHelpText>If your desired selection is not available populate exception field below</inlineHelpText>
    <label>PO SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#57 Grey Stone load 1</fullName>
            </value>
            <value>
                <fullName>#57 Grey Stone load 2</fullName>
            </value>
            <value>
                <fullName>A&amp;E Design Services</fullName>
            </value>
            <value>
                <fullName>Antenna Mounting</fullName>
            </value>
            <value>
                <fullName>Antenna Sector Removal</fullName>
            </value>
            <value>
                <fullName>Antennas Only</fullName>
            </value>
            <value>
                <fullName>Asbestos Testing</fullName>
            </value>
            <value>
                <fullName>Backup Power Harvest</fullName>
            </value>
            <value>
                <fullName>Bird Study</fullName>
            </value>
            <value>
                <fullName>Cabinet Harvest</fullName>
            </value>
            <value>
                <fullName>Cabinets and Antennas</fullName>
            </value>
            <value>
                <fullName>Cabinets Only</fullName>
            </value>
            <value>
                <fullName>Card Harvest</fullName>
            </value>
            <value>
                <fullName>Concrete Removal</fullName>
            </value>
            <value>
                <fullName>Control Descent</fullName>
            </value>
            <value>
                <fullName>Crane Rental</fullName>
            </value>
            <value>
                <fullName>Dozer</fullName>
            </value>
            <value>
                <fullName>Dumpster</fullName>
            </value>
            <value>
                <fullName>Electrical work</fullName>
            </value>
            <value>
                <fullName>Escrow Deposit</fullName>
            </value>
            <value>
                <fullName>Excavator</fullName>
            </value>
            <value>
                <fullName>Excess Cabinet Removal</fullName>
            </value>
            <value>
                <fullName>Excessive Cable tray runs</fullName>
            </value>
            <value>
                <fullName>Excessive Site Restoration</fullName>
            </value>
            <value>
                <fullName>Extra large excavator</fullName>
            </value>
            <value>
                <fullName>Freon Removal</fullName>
            </value>
            <value>
                <fullName>FRP Removal</fullName>
            </value>
            <value>
                <fullName>Fuel Cell System</fullName>
            </value>
            <value>
                <fullName>Full Deconstruction</fullName>
            </value>
            <value>
                <fullName>Full Deconstruction - Ground Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>