force-app/main/default/objects/Purchase_Order_Decon__c/fields/PO_Type_Exception_Other__c.field-meta.xml
<CustomField>
    <fullName>PO_Type_Exception_Other__c</fullName>
    <label>PO SubType Exception Other</label>
    <length>64</length>
    <type>Text</type>
</CustomField>