force-app/main/default/objects/Purchase_Order_Decon__c/fields/Responsible_for_Physical_Decom__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Physical_Decom__c</fullName>
    <formula>Site_Deconstruction_Record__r.Deconstruction_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible for Physical Decom</label>
    <type>Text</type>
</CustomField>