force-app/main/default/objects/Purchase_Order_Decon__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <formula>Site_Deconstruction_Record__r.Divestiture_Site__r.Address__c</formula>
    <inlineHelpText>Site Address</inlineHelpText>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>