force-app/main/default/objects/Purchase_Order_Decon__c/fields/Site_city__c.field-meta.xml
<CustomField>
    <fullName>Site_city__c</fullName>
    <formula>Site_Deconstruction_Record__r.City__c</formula>
    <inlineHelpText>Site City</inlineHelpText>
    <label>Site City</label>
    <type>Text</type>
</CustomField>