force-app/main/default/objects/Purchase_Order_Decon__c/fields/Site_Deconstruction_GC__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction_GC__c</fullName>
    <formula>Site_Deconstruction_Record__r.General_Contractor__r.Name</formula>
    <label>Site Deconstruction GC</label>
    <type>Text</type>
</CustomField>