force-app/main/default/objects/Purchase_Order_Decon__c/fields/Site_Deconstruction_Record__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction_Record__c</fullName>
    <label>Site Deconstruction Record</label>
    <referenceTo>Site_Decommission__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders_Decon</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>