force-app/main/default/objects/Purchase_Order_Decon__c/fields/Site_State__c.field-meta.xml
<CustomField>
    <fullName>Site_State__c</fullName>
    <formula>Site_Deconstruction_Record__r.State__c</formula>
    <label>Site State</label>
    <type>Text</type>
</CustomField>