force-app/main/default/objects/Purchase_Order_Decon__c/fields/Site_Zip__c.field-meta.xml
<CustomField>
    <fullName>Site_Zip__c</fullName>
    <formula>Site_Deconstruction_Record__r.Zip_Code__c</formula>
    <label>Site Zip</label>
    <type>Text</type>
</CustomField>