force-app/main/default/objects/Purchase_Order_Decon__c/fields/Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Structure_Type__c</fullName>
    <formula>Site_Deconstruction_Record__r.Structure_Type__c</formula>
    <label>Structure Type</label>
    <type>Text</type>
</CustomField>