force-app/main/default/objects/Purchase_Order_Decon__c/fields/Structure_Type_Main_Category__c.field-meta.xml
<CustomField>
    <fullName>Structure_Type_Main_Category__c</fullName>
    <label>Structure Type (Main Category)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tower</fullName>
            </value>
            <value>
                <fullName>Rooftop</fullName>
            </value>
            <value>
                <fullName>Watertank</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>