force-app/main/default/objects/Purchase_Order_Decon__c/fields/TMO_PM__c.field-meta.xml
<CustomField>
    <fullName>TMO_PM__c</fullName>
    <formula>Site_Deconstruction_Record__r.Project_Manager__r.FirstName &amp;&quot; &quot;&amp; Site_Deconstruction_Record__r.Project_Manager__r.LastName</formula>
    <label>TMO PM</label>
    <type>Text</type>
</CustomField>